[gd_scene load_steps=17 format=3 uid="uid://b84e6076pf2cp"]

[ext_resource type="Texture2D" uid="uid://bqjdbm2gw3hh0" path="res://Assets/Icons/farm_icon_white.png" id="1_2y8r1"]
[ext_resource type="Script" uid="uid://brm4hayrnxttn" path="res://Scenes/soil_analysis_modal.gd" id="1_b42x3"]
[ext_resource type="Texture2D" uid="uid://k1ixag2t3jkq" path="res://Assets/Icons/back_icon_white.png" id="2_2y8r1"]
[ext_resource type="FontFile" uid="uid://b5ofmvuwbvdxo" path="res://Assets/Fonts/argentum-sans.black.ttf" id="2_tt1uw"]
[ext_resource type="Script" uid="uid://bcnyg4qos0dr7" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="3_qbc21"]
[ext_resource type="Script" uid="uid://mr2fibppbyip" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="4_6aa16"]
[ext_resource type="FontFile" uid="uid://dtg8qxe14m8ef" path="res://Assets/Fonts/argentum-sans.medium.ttf" id="5_qes28"]
[ext_resource type="Theme" uid="uid://cddjsyoc7ebqj" path="res://Assets/StyleRes/scroll_themel.tres" id="5_tt1uw"]
[ext_resource type="FontFile" uid="uid://caw5hde3doeyx" path="res://Assets/Fonts/argentum-sans.semibold.ttf" id="8_rme3p"]
[ext_resource type="StyleBox" uid="uid://dr025og5g28m0" path="res://Assets/StyleRes/auth_screen.tres" id="9_uw5wo"]

[sub_resource type="Resource" id="Resource_l0ub0"]
script = ExtResource("4_6aa16")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_up55o"]
script = ExtResource("4_6aa16")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ie7eg"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.219608)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxj8g"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.219608)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogk8k"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 0.0
content_margin_bottom = 20.0
bg_color = Color(0.205117, 0.205117, 0.205117, 0.560784)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.192157)
shadow_size = 20
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qiamd"]
bg_color = Color(0.337255, 0.337255, 0.337255, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SoilAnalysisModal" type="VBoxContainer"]
z_index = 99
custom_minimum_size = Vector2(689, 1214)
anchors_preset = -1
anchor_left = 0.0208333
anchor_top = 0.0257812
anchor_right = 0.977778
anchor_bottom = 0.974219
script = ExtResource("1_b42x3")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BackButton" type="TextureButton" parent="HBoxContainer2"]
modulate = Color(0.707967, 0.707967, 0.707966, 1)
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
texture_normal = ExtResource("2_2y8r1")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="BarButtonIcon" type="TextureRect" parent="HBoxContainer2"]
modulate = Color(0.878431, 0.878431, 0.878431, 1)
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
texture = ExtResource("1_2y8r1")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("2_tt1uw")
theme_override_font_sizes/font_size = 40
text = "Soil Analysis"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="SmoothScrollContainer" type="ScrollContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_tt1uw")
scroll_horizontal = -22
vertical_scroll_mode = 2
script = ExtResource("3_qbc21")
wheel_scroll_damper = SubResource("Resource_l0ub0")
dragging_scroll_damper = SubResource("Resource_up55o")
metadata/_custom_type_script = "uid://bcnyg4qos0dr7"

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(635, 2000)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_qes28")
theme_override_font_sizes/font_size = 20
text = "Moisture Level (%)"

[node name="Moisture" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer" groups=["SoilAnalysisFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_rme3p")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_qes28")
theme_override_font_sizes/font_size = 20
text = "pH Level"

[node name="PH" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer" groups=["SoilAnalysisFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_rme3p")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")

[node name="Label3" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_qes28")
theme_override_font_sizes/font_size = 20
text = "Temperature (Â°C)"

[node name="Temperature" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer" groups=["SoilAnalysisFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_rme3p")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")

[node name="Label4" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_qes28")
theme_override_font_sizes/font_size = 20
text = "Fertility Index"

[node name="Fertility" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer" groups=["SoilAnalysisFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_rme3p")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")

[node name="Label5" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_qes28")
theme_override_font_sizes/font_size = 20
text = "Sunlight Exposure (lux)"

[node name="Sunlight" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer" groups=["SoilAnalysisFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_rme3p")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")

[node name="Label6" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_qes28")
theme_override_font_sizes/font_size = 20
text = "Humidity (%)"

[node name="Humidity" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer" groups=["SoilAnalysisFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_rme3p")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")

[node name="Label7" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_qes28")
theme_override_font_sizes/font_size = 20
text = "Crop Type"

[node name="CropType" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer" groups=["SoilAnalysisFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_rme3p")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LoginButton" type="Button" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(615, 75)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_qes28")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = ExtResource("9_uw5wo")
theme_override_styles/disabled = SubResource("StyleBoxFlat_qiamd")
theme_override_styles/hover = ExtResource("9_uw5wo")
theme_override_styles/pressed = ExtResource("9_uw5wo")
theme_override_styles/normal = ExtResource("9_uw5wo")
text = "Submit"

[connection signal="pressed" from="HBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
